--- a/style.css
+++ b/style.css
@@ -16,11 +16,12 @@ nav {
   color: white;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 nav .logo {
   display: flex;
 }
-.logo h1 {
+nav h1 {
   font-size: 40px;
   line-height: 0;
 }
@@ -37,6 +38,20 @@ nav .logo {
 }
 .menu a:hover {
   background-color: #0202df;
+}
+.dropdown {
+  display: none;
+}
+/* ---------
+Nav media
+------------ */
+@media only screen and (max-width: 600px) {
+  .menu {
+    display: none;
+  }
+  .dropdown {
+    display: block;
+  }
 }
 .round_img {
   width: 60px;
