--- a/style.css
+++ b/style.css
@@ -45,13 +45,14 @@ nav h1 {
 /* ---------
 Nav media
 ------------ */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 650px) {
   .menu {
     display: none;
   }
   .dropdown {
     display: block;
   }
+  /* --------------------- */
 }
 .round_img {
   width: 60px;
